# traxion-domain

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
traxion/: __init__.py
traxion/models/base_models/: base_model.py  queryable_model.py  updatable_model.py
traxion/models/v1/: service_orders.py  vehicles.py
traxion/services/base_services/: abstract_service.py  base_service.py
traxion/services/v1/: service_orders.py  vehicles.py
