[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [
  {name = "Luis Gerardo Fosado Baños", email = "yeralway1@gmail.com"},
]
dependencies = [
  "pydantic==2.10.6",
]
description = "traxion Domain Python"
license = {text = "MIT"}
name = "traxion-domain"
readme = "README.md"
requires-python = ">=3.11"
version = "1.0.0"

[project.optional-dependencies]
dev = [
  "pytest==7.2.0",
  "pytest-mock==3.10.0",
]

[project.urls]
Homepage = "https://github.com/GerardoX1/traxion-domain.git"

[tool.setuptools]
packages = ["traxion"]

[tool.setuptools.package-data]
"traxion_domain" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
